	  do_right(). (DLR)
- browser.c:
  do_browser()
	- Refactor the mouse support, modeling it after do_mouse() for
	  consistency. (DLR)
	- Remove unneeded call to blank_edit(). (DLR)
	- After entering "..", select the directory we were in before
	  instead of the first filename in the list, as Pico does. (DLR)
	- Simplify screen update handling and exiting. (DLR)
  do_browse_from()
	- During the operating directory check, if path isn't NULL,
	  don't bother freeing it before mallocstrcpy()ing operating_dir
	  into it, as the latter operation will free it. (DLR)
  browser_init()
	- Fix off-by-one error when calculating longest that kept the
	  rightmost column of the screen from being used. (DLR)
	- Calculate width here instead of in browser_refresh(), as it's
	  more consistent. (DLR)
  browser_refresh()
	- Simplify. (DLR)
	- Fix problems where translated versions of "(dir)" could be
	  truncated, and where file sizes could be too long. (DLR)
	- For the ".." entry, display "(parent dir)" instead of "(dir)",
	  as Pico does. (DLR)
	- If a filename is too long, truncate it and display an ellipsis
	  before it, as titlebar() does. (DLR)
	- Add translator comments explaining the maximum intended
	  lengths of "(dir)" and "(parent dir)". (DLR)
	- Fix problem where width wouldn't be properly initialized if
	  the file list took up one line or less. (DLR)
	- Don't display overly long filenames with ellipses if the
	  number of columns is extremely small. (DLR)
  browser_select_filename()
	- New function, used to select a specific filename in the list.
	  (DLR)
  findnextfile()
	- Simplify the uses of tail(). (DLR)
  striponedir()
	- Since all the strings passed to this are dynamically
	  allocated, use null_at() to strip the directory from the
	  string.  Also, return the stripped path instead of modifying
	  path. (DLR)
- files.c:
  get_full_path()
	- Don't return NULL when the current directory doesn't exist, as